--- a/projet2/package.json
+++ b/projet2/package.json
@@ -7,8 +7,11 @@
     "eth-gas-reporter": "^0.2.25"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "coveralls": "^3.1.1",
     "solidity-coverage": "^0.8.2",
-    "truffle": "^5.9.4"
+    "truffle": "^5.9.4",
+    "web3": "^1.10.0"
   }
 }
